--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
-
 [workspace.package]
 version = "0.1.0"
 license = "MIT"
 authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
-description = "A laguage sever for github flavored markdown"
+description = "A laguage server for gfm markdown"
 homepage = "https://github.com/abhinandh-s/gfm-analyzer"
 documentation = "https://github.com/abhinandh-s/gfm-analyzer"
 categories = ["command-line-utilities"]
@@ -11,9 +10,9 @@ keywords = ["cli", "tool", "utility"]
 
 [workspace]
 resolver = "3"
+
 members = [
-  "crates/gfm-analyzer",
-  "crates/gfm-syntax"
+  "crates/*"
 ]
 
 [workspace.dependencies]
@@ -26,9 +25,9 @@ dashmap = "6.1"
 env_logger = "0.11"
 serde_json = "1.0"
 ropey = "1.6"
-gfm-syntax = { path = "crates/gfm-syntax", features = ["tower-lsp"] }
+gfm-syntax = { path = "./crates/gfm-syntax", features = ["tower-lsp"] }
 tower-lsp = "0.20"
-tokio = { version = "1.42", features = ["full"] }
+tokio = { version = "1.49", features = ["full"] }
 tracing-subscriber = "0.3"
 
 [profile.release]
