--- a/crates/gfm-analyzer/Cargo.toml
+++ b/crates/gfm-analyzer/Cargo.toml
@@ -12,6 +12,7 @@ keywords.workspace = true
 
 [dependencies]
 ecow.workspace = true
+dirs.workspace = true
 reqwest = { version = "0.13", default-features = false, features = ["json", "blocking", "rustls"]}
 gfm-syntax = { workspace = true, features = ["tower-lsp"] }
 ropey.workspace = true
